Handle timeseries with TZD
Note: Fixed some issues on TimeseriesFromCSVController.php
